--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set up python 
+      uses: actions/setup-python@v1
+      with: 
+        python-version: 3.8
     - name: Prepare environment
-      run: python setup.py install
+      run: |
+        python -m pip install --upgrade pip
+        python setup.py install
     - name: Run on toy example
       run: |
         cd toy
