--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python setup.py install
-    - name: Reinstall pyasp
+    - name: Reinstall pytest 
       run: |
-        pip uninstall pyasp --yes
-        pip install pyasp==1.4.3 --no-cache-dir
-    - name: Run on toy example
+        pip install pytest
+    - name: execute test.py on toy example
       run: |
-        cd toy
-        meneco -d draft.sbml -s seeds.sbml -t targets.sbml -r repair.sbml  2>&1 | tee output.log
-        tail -n2 output.log | sort | fmt | tee output_union.log | diff --report-identical-files - expected_union.log
+        py.test test.py 
