--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python setup.py install
-    - name: Reinstall pytest 
+    - name: install pytest 
       run: |
         pip install pytest
     - name: execute test.py on toy example
