--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python setup.py install
+    - name: Reinstall pyasp
+      run: |
+        pip uninstall pyasp --yes
+        pip install pyasp==1.4.3 --no-cache-dir
     - name: install pytest 
       run: |
         pip install pytest
