update of the ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,10 @@ jobs:
       run: |
         pip uninstall pyasp --yes
         pip install pyasp==1.4.3 --no-cache-dir
-    - name: Run on toy example
+    - name: install pytest 
       run: |
-        cd toy
-        meneco -d draft.sbml -s seeds.sbml -t targets.sbml -r repair.sbml  2>&1 | tee output.log
-        tail -n2 output.log | sort | fmt | tee output_union.log | diff --report-identical-files - expected_union.log
+        pip install pytest
+    - name: execute test.py on toy example
+      run: |
+        cd test
+        py.test test.py 
