--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,6 +1,7 @@
 name: Publish Python 🐍 distributions 📦 to PyPI
-on: release
-  types: [created]
+on: 
+  release:
+    types: [created]
 
 jobs:
   build-n-publish:
